[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "getmac"
dynamic = ["version", "readme"]
# TODO: add contributors to authors?
authors = [
    { name="Christopher Goes", email="ghostofgoes@gmail.com" }
]
description = "Get MAC addresses of remote hosts and local interfaces"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: BSD :: NetBSD",
    "Operating System :: POSIX :: BSD :: OpenBSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: Other",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed"
]
keywords=[
    "getmac",
    "get-mac",
    "macaddress",
    "mac-address",
    "mac",
    "ethernet",
    "mac-48",
    "networking",
    "network",
    "networking",
    "layer2",
    "layer-2",
    "802.3"
]

[project.urls]
"Homepage" = "https://github.com/GhostofGoes/getmac"
# TODO: get ReadTheDocs working
# "Documentation" = "https://getmac.readthedocs.io/en/latest/"
"Changelog" = "https://github.com/GhostofGoes/getmac/blob/main/CHANGELOG.md"
"Issue tracker" = "https://github.com/GhostofGoes/getmac/issues"
"Source" = "https://github.com/GhostofGoes/getmac"
"Discord server" = "https://discord.gg/python"

[project.scripts]
getmac = "getmac.__main__:main"


[tool.poetry]
name = "getmac"
version = "1.0.0a0"
description = ""
license = "MIT"
# TODO: add contributors to authors?
authors = [
    "Christopher Goes <ghostofgoes@gmail.com>"
]
maintainers = [
    "Christopher Goes <ghostofgoes@gmail.com>"
]
# TODO (before 1.0.0 is released): change to ["README.md", "CHANGELOG.md"] once poetry updates
# https://github.com/python-poetry/poetry/issues/6633
readme = "README.md"
repository = "https://github.com/GhostofGoes/getmac"
# documentation = ""  # TODO
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: BSD :: NetBSD",
    "Operating System :: POSIX :: BSD :: OpenBSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: Other",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed"
]
keywords=[
    "getmac",
    "get-mac",
    "macaddress",
    "mac-address",
    "mac",
    "ethernet",
    "mac-48",
    "networking",
    "network",
    "networking",
    "layer2",
    "layer-2",
    "802.3"
]
packages = [
    { include = "getmac" }
]
include = [
    { path = "tests", format = "sdist" },
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "CONTRIBUTING.md", format = "sdist"},
    { path = "SECURITY.md", format = "sdist" },
    { path = "pyproject.toml", format = "sdist" },
    { path = "tox.ini", format = "sdist" },
    { path = "getmac" },
    { path = "LICENSE" },
    { path = "README.md" },
]

[tool.poetry.scripts]
getmac = 'getmac.__main__:main'

[tool.poetry.urls]
"Homepage" = "https://github.com/GhostofGoes/getmac"
# TODO: get ReadTheDocs working
# "Documentation" = "https://getmac.readthedocs.io/en/latest/"
"Changelog" = "https://github.com/GhostofGoes/getmac/blob/main/CHANGELOG.md"
"Issue tracker" = "https://github.com/GhostofGoes/getmac/issues"
"Source" = "https://github.com/GhostofGoes/getmac"
"Discord server" = "https://discord.gg/python"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
tox = "^4"

[tool.poetry.group.ci.dependencies]
tox = "^4"
tox-gh-actions = "*"
coveralls = "*"
tomli = { version = "*", python = "<3.12" }

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-randomly = "*"
pytest-mock = "*"
pytest-benchmark = "*"
pytest-cov = "*"
pytest-xdist = "*"
psutil = "*"
pygments = "^2.13"

[tool.poetry.group.lint.dependencies]
codespell = ">=2.2.4"
tomli = { version = "*", python = "<3.12" }
ruff = "*"
vulture = "*"
validate-pyproject = {extras = ["all"], version = "^0.13"}
black = "^23.3.0"
mypy = "^1.3.0"

[tool.poetry.group.docs.dependencies]
furo = {version = "*", python = ">=3.8,<4.0"}
sphinx = {version = "^6.1.3", python = ">=3.8,<4.0"}
recommonmark = {version = "^0.7.1", python = ">=3.8,<4.0"}
sphinx-autodoc-typehints = {version = "^1.21.8", python = ">=3.8,<4.0"}
sphinx-copybutton = {version = "^0.5.1", python = ">=3.8,<4.0"}
sphinx-inline-tabs = {version = "^2022.1.2b11", python = ">=3.8,<4.0"}
sphinx-tabs = {version = "^3.4.1", python = ">=3.8,<4.0"}


[tool.setuptools]
platforms = ["any"]
zip-safe = true
packages = ["getmac"]

[tool.setuptools.dynamic]
version = { attr = "getmac.getmac.__version__" }
# Build the page that will be displayed on PyPI from the README and CHANGELOG
readme = { file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown" }


[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = ".github getmac samples scripts .git .tox .vagrant .idea .vscode dist build *.egg .* .venv"
addopts = "--tb=short"

[tool.coverage.run]
relative_files = true  # required for coveralls

[tool.codespell]
check-filenames = true
skip = '*.log,*.out,build,dist,*.pyc,*.class,*.git,*.vagrant,*.tox,*.egg-info,*.idea,*.vscode,_build,.doctrees,htmlcov,.venv,.mypy_cache,deb_dist'
ignore-words-list = 'ether,Expresso,expresso,Espresso,espresso'


# https://beta.ruff.rs/docs
[tool.ruff]
line-length = 99
# show-source = true

# Rules: https://beta.ruff.rs/docs/rules
# If you violate a rule, lookup the rule on the Rules page in ruff docs.
# Many rules have links you can click with a explanation of the rule and how to fix it.
# If there isn't a link, go to the project the rule was source from (e.g. flake8-bugbear)
# and review it's docs for the corresponding rule.
# If you're still confused, ask a fellow developer for assistance.
# You can also run "ruff rule <rule>" to explain a rule on the command line, without a browser or internet access.
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle
    "W",    # Warning
    "N",    # pep8-naming
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "TID",  # flake8-tidy-imports
    "ARG",  # flake8-unused-arguments
    "PGH",  # pygrep-hooks
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Errors
    "PLW",  # Pylint Warnings
    "RUF",  # Ruff-specific rules
]

# Files to exclude from linting
extend-exclude = [
    "*.pyc",
    "__pycache__",
    ".tox",
    ".venv",
    ".github",
    ".vagrant",
    "docs",
    "packaging",
    "samples",
    "scripts",
]

# Linting error codes to ignore
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "RET505",  # unnecessary 'else' after 'return' statement
    "PLW0603", # Using the global statement to update is discouraged
    "PLW2901", # for loop variable overwritten by assignment target
    "G004",    # Logging statement uses f-string
    "PIE790",  # no-unnecessary-pass
    "PGH003",  # Use specific rule codes when ignoring type issues
    "PLC1901", # compare-to-empty-string
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "S101", "S104", "S603"]
